--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-        <title>Social App</title>
+        <title>Nông Sản App</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
